# dtcpip_mock_lib

./: COPYING  Makefile  README.md  configure.ac
_build/: Makefile
src/: Makefile.am  MockDLL.c  MockDLL.c~  MockDLL.h  mpe_error.h  mpe_types.h  mpe_types.h~  os_error.h  os_util_common.h
src/linux/: Makefile  mock_sync.c  mock_sync.c~  mock_sync.h  mock_sync.h~
src/linux/include/: os_sync.h  os_sync.h~  os_thread.h  os_types.h
src/win32/: mock_sync.c  mock_sync.c~  mock_sync.h
src/win32/include/: os_sync.h  os_thread.h  os_types.h
